VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc1Down.err
[8MB/455.1MB][  1%][>                                                 ][2.667MB/s]  [16MB/455.1MB][  3%][=>                                                ][3.2MB/s]  [24MB/455.1MB][  5%][==>                                               ][4MB/s]  [32MB/455.1MB][  7%][===>                                              ][4.571MB/s]  [40MB/455.1MB][  8%][====>                                             ][5MB/s]  [48MB/455.1MB][ 10%][=====>                                            ][5.333MB/s]  [56MB/455.1MB][ 12%][======>                                           ][5.091MB/s]  [64MB/455.1MB][ 14%][=======>                                          ][5.333MB/s]  [72MB/455.1MB][ 15%][=======>                                          ][5.538MB/s]  [80MB/455.1MB][ 17%][========>                                         ][5.714MB/s]  [88MB/455.1MB][ 19%][=========>                                        ][5.867MB/s]  [96MB/455.1MB][ 21%][==========>                                       ][6MB/s]  [104MB/455.1MB][ 22%][===========>                                      ][6.118MB/s]  [112MB/455.1MB][ 24%][============>                                     ][6.222MB/s]  [120MB/455.1MB][ 26%][=============>                                    ][6.316MB/s]  [128MB/455.1MB][ 28%][==============>                                   ][6.4MB/s]  [136MB/455.1MB][ 29%][==============>                                   ][6.476MB/s]  [144MB/455.1MB][ 31%][===============>                                  ][6.545MB/s]  [152MB/455.1MB][ 33%][================>                                 ][6.609MB/s]  [160MB/455.1MB][ 35%][=================>                                ][6.4MB/s]  [168MB/455.1MB][ 36%][==================>                               ][6.462MB/s]  [176MB/455.1MB][ 38%][===================>                              ][6.519MB/s]  [184MB/455.1MB][ 40%][====================>                             ][6.571MB/s]  [192MB/455.1MB][ 42%][=====================>                            ][6.621MB/s]  [200MB/455.1MB][ 43%][=====================>                            ][6.667MB/s]  [208MB/455.1MB][ 45%][======================>                           ][6.71MB/s]  [216MB/455.1MB][ 47%][=======================>                          ][6.75MB/s]  [224MB/455.1MB][ 49%][========================>                         ][6.788MB/s]  [232MB/455.1MB][ 50%][=========================>                        ][6.824MB/s]  [240MB/455.1MB][ 52%][==========================>                       ][6.857MB/s]  [248MB/455.1MB][ 54%][===========================>                      ][6.889MB/s]  [256MB/455.1MB][ 56%][============================>                     ][6.919MB/s]  [264MB/455.1MB][ 58%][=============================>                    ][6.947MB/s]  [272MB/455.1MB][ 59%][=============================>                    ][6.974MB/s]  [280MB/455.1MB][ 61%][==============================>                   ][6.829MB/s]  [288MB/455.1MB][ 63%][===============================>                  ][6.857MB/s]  [296MB/455.1MB][ 65%][================================>                 ][6.884MB/s]  [312MB/455.1MB][ 68%][==================================>               ][7.091MB/s]  [320MB/455.1MB][ 70%][===================================>              ][7.111MB/s]  [328MB/455.1MB][ 72%][====================================>             ][7.13MB/s]  [336MB/455.1MB][ 73%][====================================>             ][7.149MB/s]  [344MB/455.1MB][ 75%][=====================================>            ][7.167MB/s]  [352MB/455.1MB][ 77%][======================================>           ][7.184MB/s]  [360MB/455.1MB][ 79%][=======================================>          ][7.2MB/s]  [368MB/455.1MB][ 80%][========================================>         ][7.216MB/s]  [384MB/455.1MB][ 84%][==========================================>       ][7.385MB/s]  [392MB/455.1MB][ 86%][===========================================>      ][7.396MB/s]  [408MB/455.1MB][ 89%][============================================>     ][7.556MB/s]  [416MB/455.1MB][ 91%][=============================================>    ][7.564MB/s]  [424MB/455.1MB][ 93%][==============================================>   ][7.571MB/s]  [440MB/455.1MB][ 96%][================================================> ][7.719MB/s]  [448MB/455.1MB][ 98%][=================================================>][7.724MB/s]  [455.1MB/455.1MB][100%][==================================================][7.846MB/s]  [455.1MB/455.1MB][100%][==================================================][7.846MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_61101/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_61101/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
